# mesh-seg

./: mesh-seg.sln
mesh-seg/: 3dOperator.cpp  3dOperator.h  52.stl  CMakeLists.txt  ClassDiagram.cd  DialogLabel.cpp  DialogLabel.h  DialogLabel.ui  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MeshViewer.cpp  MeshViewer.h  Point3d.cpp  Point3d.h  Util.cpp  Util.h  bsp_Frame1.cpp  bsp_Frame1.h  bsp_Frame2.cpp  bsp_Frame2.h  bsp_Frame3.cpp  bsp_Frame3.h  bsp_LVHelm.cpp  bsp_LVHelm.h  bsp_part.cpp  bsp_part.h  bsp_part2.h  csy_ALLPART.cpp  csy_ALLPART.h  csy_Pitching.cpp  csy_Pitching.h  dijkstra.cpp  dijkstra.h  gy_fitting.cpp  gy_fitting.h  gy_show.cpp  gy_show.h  lty_STL.cpp  lty_STL.h  (+5 more)
mesh-seg/GeneratedFiles/: ui_DialogLabel.h  ui_MainWindow.h
mesh-seg/GeneratedFiles/Debug/: moc_MainWindow.cpp  moc_MeshViewer.cpp
mesh-seg/GeneratedFiles/Release/: moc_DialogLabel.cpp  moc_MeshViewer.cpp
mesh-seg/x64/Debug/mesh-seg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mesh-seg.lastbuildstate
mesh-seg/x64/Release/mesh-seg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mesh-seg.lastbuildstate
